--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
             <h1>Get Started Now </h1>
             <div class="input_container">
                 <div><p>Name </p></div>
-                <input type="text" name="text" placeholder="Enter your name">
+                <input type="text" name="text" placeholder="Enter your name" maxlength="50" minlength="5">
             </div>
             <div class="input_container">
                 <div><p>Email address </p></div>
-                <input type="email" name="email" placeholder="Enter your email">
+                <input type="email" name="email" placeholder="Enter your email" maxlength="50" minlength="5" disabled>
             </div>
             <div>
                 <div><p>Password</p></div>
-                <input type="password" name="password" id="password" placeholder="Name">
+                <input type="password" name="password" id="password" placeholder="Name" minlength="8">
             </div>
             <div class="flex_container">
-                <input type="checkbox">
+                <input type="checkbox" name="checkbox" required>
                 <div>
                     I agree to the <a href="#" class="link">terms & policy</a>
                 </div>
