--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             <h1>Get Started Now </h1>
             <div class="input_container">
                 <div><p>Name </p></div>
-                <input type="text" name="text" placeholder="Enter your name" maxlength="50" minlength="5">
+                <input type="text" name="text" placeholder="Enter your name" maxlength="50" minlength="5" required>
             </div>
             <div class="input_container">
                 <div><p>Email address </p></div>
-                <input type="email" name="email" placeholder="Enter your email" maxlength="50" minlength="5" disabled>
+                <input type="email" name="email" placeholder="Enter your email" maxlength="50" minlength="5"  required>
             </div>
             <div>
                 <div><p>Password</p></div>
-                <input type="password" name="password" id="password" placeholder="Name" minlength="8">
+                <input type="password" name="password" id="password" placeholder="Name" minlength="8" required>
             </div>
             <div class="flex_container">
                 <input type="checkbox" name="checkbox" required>
