--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Get Started Now </h1>
             <div class="input_container">
                 <div><p>Name </p></div>
-                <input type="text" name="text" placeholder="Enter your name" maxlength="50" minlength="5" required>
+                <input type="text" name="name" placeholder="Enter your name" maxlength="50" minlength="5" required>
             </div>
             <div class="input_container">
                 <div><p>Email address </p></div>
@@ -27,7 +27,7 @@
                 <input type="password" name="password" id="password" placeholder="Name" minlength="8" required>
             </div>
             <div class="flex_container">
-                <input type="checkbox" name="checkbox" required>
+                <input type="checkbox" name="termsAgree" required>
                 <div>
                     I agree to the <a href="#" class="link">terms & policy</a>
                 </div>
